# RISCV

./: README.md
CH32L103/blink/: CMakeLists.txt
CH32L103/blink/src/: ch32l103_conf.h  main.c
CH32L103/lib/: debug.c  debug.h  delay.c  i2c.c  i2c.h  usart.c
CH32V002_004_005_006_007/: Link_002.ld  Link_004_005.ld
CH32V002_004_005_006_007/blink/: CMakeLists.txt
CH32V002_004_005_006_007/blink/src/: ch32v00X_conf.h  main.c
CH32V002_004_005_006_007/drafts/power_meter/: CMakeLists.txt
CH32V002_004_005_006_007/drafts/power_meter/src/: board.h  ch32v00X_conf.h  flash_func.h  hal.c  ina_func.c  ina_func.h  main.c  ui.c  ui.h  usart_handler.c  usart_handler.h
CH32V002_004_005_006_007/lib/: debug.c  debug.h  delay.c  i2c.c  usart.c  usart.h
CH32V002_004_005_006_007/lib/src/: ch32v00X_gpio.c
CH32V002_004_005_006_007/power_meter/: CMakeLists.txt
CH32V002_004_005_006_007/power_meter/KiCad/power_meter_ch32v006/: power_meter_ch32v006.kicad_prl  power_meter_ch32v006.kicad_pro  power_meter_ch32v006.kicad_sch
CH32V002_004_005_006_007/power_meter/src/: board.h  ch32v00X_conf.h  flash_func.c  ina_func.c  ina_func.h  ui.c  ui.h  usart_handler.c
CH32V003/drafts/esr_meter/: CMakeLists.txt
CH32V003/drafts/esr_meter/KiCad/: ESR_Meter_CH32V003.kicad_sch
CH32V003/drafts/esr_meter/src/: board.h  ch32v00x_conf.h  hal.c  main.c
CH32V003/drafts/generator_ad9833/: CMakeLists.txt
CH32V003/drafts/generator_ad9833/src/: main.c
CH32V003/drafts/light_motion_sensor/: CMakeLists.txt
CH32V003/drafts/light_motion_sensor/src/: board.h  ch32v00x_conf.h  hal.c  handlers.c  light_sensor.c  light_sensor.h  light_sensor_veml7700.c  light_sensor_veml7700.h  main.c  sensor_handler.c  sensor_handler.h  usart_handler.c  usart_handler.h
CH32V003/esr_meter/: CMakeLists.txt
CH32V003/esr_meter/KiCad/: ESR_Meter_CH32V003.kicad_prl  ESR_Meter_CH32V003.kicad_pro  ESR_Meter_CH32V003.kicad_sch
CH32V003/esr_meter/src/: board.h  ch32v00x_conf.h  hal.c  main.c
CH32V003/generator_ad9833/: CMakeLists.txt
CH32V003/generator_ad9833/src/: board.h  ch32v00x_conf.h  hal.c  hal.h  handler.c  main.c
CH32V003/lib/: debug.c  debug.h  delay.c  delay.h  system_ch32v00x.c
CH32V003/light_sensor/: CMakeLists.txt
CH32V003/light_sensor/KiCad/light_sensor_ch32v003/: light_sensor_ch32v003.kicad_prl  light_sensor_ch32v003.kicad_pro  light_sensor_ch32v003.kicad_sch
CH32V003/light_sensor/src/: board.h  ch32v00x_conf.h  hal.c  main.c
CH32V203/: README.md
CH32V203/archived/generator_ad9833/src/: board.h  ch32v20x_conf.h
CH32V203/drafts/CH32V203_meter/: CMakeLists.txt
CH32V203/drafts/CH32V203_meter/src/: board.h  ch32v20x_conf.h  hal.c  main.c
CH32V203/drafts/CH32V203_meter/src/internal_devices/: dev_internal_pwm.c  dev_internal_pwm.h
CH32V203/drafts/esr_meter/: CMakeLists.txt
CH32V203/drafts/esr_meter/src/: board.h  ch32v20x_conf.h  hal.c  main.c
CH32V203/drafts/generator_ad9833/: CMakeLists.txt
CH32V203/generator_ad9833/: CMakeLists.txt
CH32V203/generator_ad9833/src/: board.h  ch32v20x_conf.h  hal.c  main.c
CH32V203/lib/: delay.c  system_ch32v20x.c
CH32V203/lib/USBLIB/CONFIG/: hw_config.c
CH32V203/lib/USBLIB/USB_CDC/: usb_cdc.h  usb_endp.c  usb_prop.c
CH32V203/usb_cdc/: CMakeLists.txt
CH32V203/usb_cdc/src/: board.h  ch32v20x_conf.h  hal.c  main.c
CH32V307/ch32v307_memory_tester/: CMakeLists.txt
CH32V307/ch32v307_memory_tester/src/: board.h  ch32v30x_conf.h  hal.c  i2c_commands.c  i2c_commands.h  spi_commands.h
CH32V307/drafts/audio_headphone/: CMakeLists.txt
CH32V307/drafts/audio_headphone/src/: board.h  ch32v30x_conf.h  hal.c  main.c  uac10_headphone.c  uac10_headphone.h
CH32V307/drafts/ch32v307_memory_tester/: CMakeLists.txt
CH32V307/drafts/ch32v307_memory_tester/src/: 93xx_commands.c  93xx_commands.h  board.h  hal.c  i2c_commands.c  i2c_commands.h  main.c  spi_commands.c
CH32V307/drafts/sine_wave_i2s/: CMakeLists.txt
CH32V307/drafts/sine_wave_i2s/src/: board.h  ch32v30x_conf.h  hal.c  main.c  sound.c
CH32V307/ethernet_test/: CMakeLists.txt
CH32V307/ethernet_test/src/: board.h  ch32v30x_conf.h  ethernet_commands.c  ethernet_commands.h  hal.c  main.c  net_config.h
CH32V307/feprog_ch32v307/: CMakeLists.txt
CH32V307/feprog_ch32v307/src/: board.h  ch32v30x_conf.h  commands.c  main.c
CH32V307/lib/: debug.c  debug.h  delay.c  delay.h  i2c_func.c  i2c_func.h
CH32V307/lib/USBLIB/: ch32v30x_usbfs_device.c
CH32V307/lib/USBLIB/audio/: ch32v30x_usbfs_device.h
CH32V307/lib/USBLIBFS/audio/: ch32v30x_usbfs_device.c  ch32v30x_usbfs_device_old.c  usb_desc.c
CH32V307/lib/USBLIBFS/cdc/: ch32v30x_usbfs_device.h  usb_cdc.c  usb_cdc.h
CH32V307/lib/USBLIBHS/cdc/: ch32v30x_usbhs_device.c  ch32v30x_usbhs_device.h  usb_cdc.c  usb_cdc.h
CH32V307/sine_wave_i2s/: CMakeLists.txt
CH32V307/sine_wave_i2s/src/: board.h  hal.c  main.c  sound.c
CH32V307/usb_cdc/: CMakeLists.txt
CH32V307/usb_cdc/src/: hal.c
CH32V307/usb_cdc_fs/: CMakeLists.txt
CH32V307/usb_cdc_fs/src/: board.h  ch32v30x_conf.h  main.c
CH32V307/usb_cdc_hs/: CMakeLists.txt
CH32V307/usb_cdc_hs/src/: board.h  hal.c  main.c
CH32X035/: CH32X035xx.svd  startup_ch32x035.S
CH32X035/archived/generator_ad9833/: CMakeLists.txt
CH32X035/archived/generator_ad9833/src/: board.h
CH32X035/drafts/usb_cdc/: CMakeLists.txt
CH32X035/drafts/usb_cdc/src/: board.h  ch32x035_conf.h  hal.c  main.c  main.cpp
CH32X035/drafts/usb_cdc/src/usblib/: usb_device.c  usb_device.h  usb_device_x035.c  usb_device_x035.h
CH32X035/drafts/usb_cdc/src/usblib/class/cdc/: usb_cdc.c
CH32X035/generator_ad9833/: CMakeLists.txt
CH32X035/generator_ad9833/src/: board.h  ch32x035_conf.h  hal.c
CH32X035/lib/: ch32x035_it.h  debug.c  debug.h  delay.c  delay.h  system_ch32x035.c  system_ch32x035.h
CH32X035/lib/USBLIB/: ch32x035_usbfs_device.c  ch32x035_usbfs_device.h  usb_cdc.c
CH32X035/lib/src/: ch32x035_pwr.c
CH32X035/usb_cdc/: CMakeLists.txt
CH32X035/usb_cdc/src/: board.h  main.cpp
CH32X035/usb_cdc2/: CMakeLists.txt
CH32X035/usb_cdc2/src/: board.h  ch32x035_conf.h  hal.c  main.c
(+2 files in other folders)
